# openarm_camera_simulation

./: CMakeLists.txt  README.md  api_server.py
include/: camera_frame.hpp  camera_simulator.hpp  episode_recorder.hpp  joint_simulator.hpp  joint_state.hpp  synchronizer.hpp  timestamp.hpp
src/: camera_simulator.cpp  episode_recorder.cpp  joint_simulator.cpp  main.cpp  synchronizer.cpp  timestamp.cpp
static/: dashboard.js
templates/: dashboard.html
